--- a/style.css
+++ b/style.css
@@ -36,23 +36,20 @@ span {
   justify-content: center;
   margin-bottom: 20px;
   background: #e1dcd9;
-box-shadow: inset 5px 5px 10px #b4b0ae,
-            inset -5px -5px 10px #ffffff;
-            border-radius: 10px;
+  box-shadow: inset 5px 5px 10px #b4b0ae,
+    inset -5px -5px 10px #ffffff;
 }
 
 .box {
   display: none;
-  padding: 30px;
-  border-radius: 10px;
- 
-  margin-right: 30px;
+  padding: 10px;
+  background-color: white;
 }
 
 .crear {
   padding: 30px;
   border-radius: 10px;
-  
+
 }
 
 h2 {
@@ -118,16 +115,16 @@ button.add:active {
 }
 
 img {
-  width:500px;
+  width: 450px;
+  margin-top: 60px;
 }
 
 p.texto {
-  font-size: 40px;
+  font-size: 20px;
   text-align: center;
-  -webkit-text-stroke: 0.3px rgb(255, 255, 255);
   font-weight: 900;
   color: #000000;
-  margin-top: -90px;
+  text-align: left;
   cursor: move;
 }
 
